--- a/industrialsafetytrainers/src/scss/partials/_header.scss
+++ b/industrialsafetytrainers/src/scss/partials/_header.scss
@@ -1,6 +1,10 @@
 body{
 	> header{
 		background: #fff;
+		position: fixed;
+		width: 100%;
+		z-index: 100;
+
 		.main-header{
 			display: flex;
 			justify-content: space-between;
